# intro-to-AI

./: README.md
cw1/: przeszukiwanie.py  tresc.txt
task1-gradient_descent/: README.md  przeszukiwanie.py
task2/: evolutionary_algorithm.ipynb
task2 - evolutionary algorithm/: evolutionary_algorithm.ipynb
task2 - evolutionary algorithm/.ipynb_checkpoints/: evolutionary_algorithm-checkpoint.ipynb
task2-evolutionary_algorithm/: README.md
task2-minimax-tic-tac-toe/: minimax_tictaxtoe.ipynb
task2/.ipynb_checkpoints/: evolutionary_algorithm-checkpoint.ipynb
task3-minimax-tic-tac-toe/: README.md
task4-naive-bayes-classifier/: README.md
task4-naive-bayes-classifier/.ipynb_checkpoints/: classification-checkpoint.ipynb  classifier-checkpoint.ipynb
task5-artificial-neural-network/: README.md  neural_network.ipynb  pyproject.toml
task6-reinforecement-q-learning/: README.md  q-learning.ipynb
task6-reinforecement-q-learning/.ipynb_checkpoints/: q-learning-checkpoint.ipynb
