[tool.poetry]
name = "szczepanik-hondra-wsi"
version = "0.1.0"
description = ""
authors = ["Piotr Hondra, Kamil Szczepanik"]

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.11.2"
ipykernel = "^6.6.0"
pytest = "^6.2.5"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
